# TextNotes

./: README.md  com.petrstepanov.TextNotes.json  meson.build
data/: com.petrstepanov.TextNotes.desktop.in  com.petrstepanov.TextNotes.gschema.xml  com.petrstepanov.TextNotes.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  textnotes-application.c  textnotes-application.h  textnotes-window.c  textnotes-window.h  textnotes-window.ui  textnotes.gresource.xml
